window resizing problem #19550

Closed
opened 2009-10-05 10:34:28 +02:00 by Fred Feuerstein · 6 comments

%%%how to reproduce: grab upper right corner to resize, pull it all the way down to the lower left corner, dont release but pull it back to a screen-filling size.
i end up with a fully trashed blender gui.
the gui layout system seems to be involved here, because i can still open the main menu or grab the timeline border to drag it, however it can not be draged down (and it should be, it somehow moved up to the very top -> see screenshot).

this doesnt happen on 2.49b or 2.48a, and if i dont resize the window, gui is working pretty well.

intel quadcore/2.4ghz
ati 4770 using catalyst driver
ubuntu 9.04
blender svn ver. 23630

2.5 looks nice!%%%

%%%how to reproduce: grab upper right corner to resize, pull it all the way down to the lower left corner, dont release but pull it back to a screen-filling size. i end up with a fully trashed blender gui. the gui layout system seems to be involved here, because i can still open the main menu or grab the timeline border to drag it, however it can not be draged down (and it should be, it somehow moved up to the very top -> see screenshot). this doesnt happen on 2.49b or 2.48a, and if i dont resize the window, gui is working pretty well. intel quadcore/2.4ghz ati 4770 using catalyst driver ubuntu 9.04 blender svn ver. 23630 2.5 looks nice!%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%uhh... forgot to say that i am using the 64bit version.%%%

%%%uhh... forgot to say that i am using the 64bit version.%%%

%%%There is a related issue when you resize the window by very small increments (e.g. <5 pixels)

When you reduce the size of the window, all areas reduce their size to, but it doesn't seem to be proportional though. Like the right column (the one with the properties and outliner spaces on 2.5 default view) is reduced more than the ones more on the left.

It becomes weird when you increase the size (width in this example) by small increments : the right column width continues to decrease !

This looks like a rounding issue in the spaces size computation after resize.
One solution might be to maintain spaces relative size values independent of window/resolution size, like a percentage, for easing this spaces size computation after window resize ?

Furthermore, if, by such small steps, you decrease the window size too much, you come up with complete garbage (even when you enlarge again), as shown in the bildschirmfoto.png picture.

This bug is a show stopper for the "live resize" feature, that is having window contents redrawn continuously while the user is changing its size.
(This feature is the one that makes lots of window size changes by small steps)

This bug already existed in 2.4x releases.%%%

%%%There is a related issue when you resize the window by very small increments (e.g. <5 pixels) When you reduce the size of the window, all areas reduce their size to, but it doesn't seem to be proportional though. Like the right column (the one with the properties and outliner spaces on 2.5 default view) is reduced more than the ones more on the left. It becomes weird when you increase the size (width in this example) by small increments : the right column width continues to decrease ! This looks like a rounding issue in the spaces size computation after resize. One solution might be to maintain spaces relative size values independent of window/resolution size, like a percentage, for easing this spaces size computation after window resize ? Furthermore, if, by such small steps, you decrease the window size too much, you come up with complete garbage (even when you enlarge again), as shown in the bildschirmfoto.png picture. This bug is a show stopper for the "live resize" feature, that is having window contents redrawn continuously while the user is changing its size. (This feature is the one that makes lots of window size changes by small steps) This bug already existed in 2.4x releases.%%%
Member

%%%This is caused by the screen subdivision system, it stores internally integer coords for splits, which causes things to go bad on extreme small sizes.
For all platforms there should be a minimum size hint set, like 320x240. In OSX it already is. Campbell knows how.%%%

%%%This is caused by the screen subdivision system, it stores internally integer coords for splits, which causes things to go bad on extreme small sizes. For all platforms there should be a minimum size hint set, like 320x240. In OSX it already is. Campbell knows how.%%%

%%%fixed in svn.%%%

%%%fixed in svn.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#19550
No description provided.